--- a/modal.html
+++ b/modal.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="Es">
   <head>
     <meta charset="utf-8">
     <title>prueba de modal</title>
@@ -32,34 +32,58 @@
                 <p class="text-center">Las personas que se inscriban podrán unirse al lanzamiento y actividades de difusión de las investigaciones y productos generados por el equipo de Convoca y sus aliados. Los participantes podrán formar parte del equipo en estas actividades.</p>
               </div>
               <div class="modal-body">
-                <form role="form">
-                  <div class="form-group text-center">
-                    <p class="text-center">*Indica requerido</p>
-                    <label for="recipient-name" class="control-label">Nombre Completo*</label>
-                    <input type="text" class="form-control" id="nom">
-                  </div>
-                  <div class="form-group text-center">
-                    <label for="message-text" class="control-label">Correo*</label>
-                    <input type="email" class="form-control" id="correo">
-                  </div>
-                  <div class="form-group text-center">
-                    <label for="recipient-name" class="control-label">Facebook</label>
-                    <input type="text" class="form-control" id="fb">
-                  </div>
-                  <div class="form-group text-center">
-                    <label for="recipient-name" class="control-label">Twitter</label>
-                    <input type="text" class="form-control" id="tw">
-                  </div>
-                  <div class="form-group text-center">
-                    <button type="button" class="btn btn-danger-modal text-center" name="inscri" data-dismiss="modal">Inscribete</button>
+                <!-- Begin MailChimp Signup Form -->
+                <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+                <style type="text/css">
+                	#mc_embed_signup{color:#fff;clear:left; }
+                </style>
+                <div id="mc_embed_signup">
+                <form action="https://convoca.us10.list-manage.com/subscribe/post?u=fc17bd11c5057fa37d40d1d4e&amp;id=65457de1b7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                    <div id="mc_embed_signup_scroll">
+                <div class="indicates-required text-center"><span class="asterisk">*</span>Indica Requerido</div>
+                <div class="mc-field-group text-center">
+                	<label for="mce-FNAME">Nombre Completo  <span class="asterisk">*</span>
+                </label>
+                	<input type="text" value="" name="FNAME" class="required" id="mce-FNAME" style="color:#000;">
+                </div>
+                <div class="mc-field-group text-center">
+                	<label for="mce-EMAIL">Correo  <span class="asterisk">*</span>
+                </label>
+                	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" style="color:#000;">
+                </div>
+                <div class="mc-field-group text-center">
+                	<label for="mce-LFACE">Facebook </label>
+                	<input type="text" value="" name="LFACE" class="" id="mce-LFACE" style="color:#000;">
+                </div>
+                <div class="mc-field-group text-center">
+                	<label for="mce-LTWI">Twitter </label>
+                	<input type="text" value="" name="LTWI" class="" id="mce-LTWI" style="color:#000;">
+                </div>
+                	<div id="mce-responses" class="clear">
+                		<div class="response" id="mce-error-response" style="display:none;"></div>
+                		<div class="response" id="mce-success-response" style="display:none"></div>
+                	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_fc17bd11c5057fa37d40d1d4e_65457de1b7" tabindex="-1" value=""></div>
+                    <div class="clear text-center"><input type="submit" value="Inscribete" name="subscribe" id="mc-embedded-subscribe" class="btn btn-danger-modal"></div>
                   </div>
                 </form>
+                </div>
+                <script type='text/javascript' src='js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='LFACE';ftypes[2]='text';fnames[3]='LTWI';ftypes[3]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+                <!--End mc_embed_signup-->
               </div>
             </div>
           </div>
         </div>
     </div>
   </div>
+</section>
+<section style="width:100%; height:500px;">
+      <div class="pano">
+          <h1>panel</h1>
+      </div>
+      <div class="flec">
+        <img class="img-fle" src="img/flech.png" alt="">
+      </div>
 </section>
   </body>
 </html>
